--- a/day17/src/main/resources/templates/index-hff.html
+++ b/day17/src/main/resources/templates/index-hff.html
@@ -12,17 +12,30 @@
 
         <form method="POST" action="/hff/cart">
 
+			  <input type="hidden" name="previousCart" data-th-value="${previousCart}">
+
             <div>
-                <input type="text" name="name" size="30" placeholder="Your name">
+                <input type="text" name="name" size="30" placeholder="Your name" 
+                        data-th-value="${name}">
             </div>
+
             <div>
                 <input type="text" name="item" size="30" placeholder="Your item">
             </div>
             <div>
+					<button type="submit" formmethod="POST" formaction="/session/cart/checkout">
+						Checkout
+					</button>
                 <button type="submit">Add to Cart</button>
             </div>
 
         </form>
+
+        <ul>
+            <li data-th-each="i: ${cart}">
+                <span data-th-text="${i}"></span>
+            </li>
+        </ul>
         
     </body>
 </html>
