--- a/day17/src/main/resources/templates/index.html
+++ b/day17/src/main/resources/templates/index.html
@@ -10,7 +10,7 @@
 
         <h1>My Shopping Cart</h1>
 
-        <form method="POST" action="/cart">
+        <form method="POST" action="/session/cart">
 
             <div>
                 <input type="text" name="name" size="30" placeholder="Your name" 
@@ -21,6 +21,9 @@
                 <input type="text" name="item" size="30" placeholder="Your item">
             </div>
             <div>
+					<button type="submit" formmethod="POST" formaction="/session/cart/checkout">
+						Checkout
+					</button>
                 <button type="submit">Add to Cart</button>
             </div>
 
