--- a/day29/fundstransfer/src/app/components/failed.component.html
+++ b/day29/fundstransfer/src/app/components/failed.component.html
@@ -1,6 +1,6 @@
 <h2>Transaction Failed</h2>
 
-<h3><code>{{ error | json }}</code></h3>
+<h3><code class="error">{{ error | json }}</code></h3>
 
 <button type="button" [routerLink]="['/']"> 
 	Back
