--- a/day29/fundstransfer/src/app/components/success.component.html
+++ b/day29/fundstransfer/src/app/components/success.component.html
@@ -1,6 +1,6 @@
 <h2>Transaction Successful</h2>
 
-<h3>Your transaction Id is <code>{{ transactionId }}</code></h3>
+<h3>Your transaction Id is <code class="success">{{ transactionId }}</code></h3>
 
 <button type="button" [routerLink]="['/']"> 
 	Back
