--- a/day31-doc/src/app/components/deck-of-cards.component.html
+++ b/day31-doc/src/app/components/deck-of-cards.component.html
@@ -1,5 +1,5 @@
 
 <div>
   <img src="/assets/images/Back.png" (click)="take()">
-  <span>   Remaining cards: {{ cards.deck.length }}</span>
+  <span>   Remaining cards: {{ remainingCards }}</span>
 </div>
