--- a/day33/src/app/components/friends.component.html
+++ b/day33/src/app/components/friends.component.html
@@ -6,7 +6,7 @@
     <tr>
       <td>Name:</td>
       <td>
-        <input type="text" size="30" formControlName="name">
+        <input type="text" size="30" formControlName="name" [readOnly]="readOnly">
       </td>
     </tr>
     <tr>
